[package]
name = "ruserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
hyper = "1.4.1"
serde = { version = "1.0.205", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
